# project_openseekmap

./: sources
assignment/: utf8-example.c  utf8-example.h
datafiles/: test.txt
extra/: .gitignore
src/: CMakeLists.txt  main.c  main.h
src/best_total_matches/: sort_and_print.c  sort_and_print.h
src/combinator/: combinator.c  combinator.h  match_combinator.c  match_combinator.h
src/databank/: databank.c  databank.h
src/editeerafstand/: editeerafstand.c  editeerafstand.h
src/preprocess/: preprocess.c  preprocess.h
src/sanitize/: accents.c  accents.h  sanitize.c  sanitize.h  utf8.c
src/score_calculator/: rosetta.c  rosetta.h  score_calculator.c  score_calculator.h
src/search/: search.c  search.h
src/shiftAnd/: shiftand.c  shiftand.h
tests/: CMakeLists.txt  main_test.c  runTests.sh  test_combinator.c  test_combinator.h  test_editeerafstand.c  test_editeerafstand.h  test_sanitize.c  test_sanitize.h
tests/compare/: De_Maaskuns_Arendok.txt  Zaventem.txt  de_sterre_co1.txt  de_sterre_co2.txt  de_sterre_gent.txt  essestraat_impe.txt  heldenplijn_hijst.txt  test_multiple_lines.txt
